# receipt-ocr

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  RELEASE.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd-deploy-python.yml  ci-build-push-python.yml  daily-check.yml  link-check.yml  receipt-ocr-app-docker.yml  receipt-ocr-daily-check.yml  receipt-ocr.yml  release-pypi.yml  release-receipt-ocr-app-docker.yml  release-test-pypi.yml  tesseract-ocr-docker.yml  tesseract-ocr.yml
app/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
src/receipt_ocr/: __about__.py  __init__.py  cli.py  constants.py  parsers.py  processors.py  prompts.py  providers.py  utils.py
src/tesseract_ocr/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  requirements.txt  utils.py
tests/: conftest.py  smoke_test.py
tests/parity_receipt_ocr/: test_response_formats.py
tests/receipt_ocr/: conftest.py  test_cli.py  test_parsers.py  test_processors.py  test_prompts.py  test_providers.py  test_utils.py
tests/tesseract_ocr/: test_app.py  test_main.py  test_utils.py
